[package]
name = "armv7r-atomicbool-align"
version = "0.1.0"
edition = "2021"

[dependencies]
#critical-section = { version = "1.2.0", features = ["std"] }
critical-section = { version = "1.2.0" }
spin = "0.9.8"


[profile.release]
opt-level = 3
debug = 2
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
